--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@ var x = d3.scaleTime().domain([d3.min(data, function(d) { return d.date; }),
 
 //This is only for the number of deaths			  
 var y = d3.scaleLinear().domain([0, d3.max(data, function(d) { return +d.dead; })])
-						 .range([ height, 0 ]);
+						 .range(([ d3.max(data, function(d) { return +d.dead; }) *
+						 height/d3.max(data, function(d) { return +d.injured; })), 0 ]);
 	  
 //This is only for the number of injured
 var y2 = d3.scaleLinear().domain([0, d3.max(data, function(d) { return +d.injured; })])
@@ -197,7 +198,7 @@ var mouseMoveBlue = function(d){
         .attr("cy", (d3.mouse(this)[1]+15) + "px")
         
     tooltip.html('<b><u>' + formatDate(x.invert(d3.mouse(this)[0])) + '</u><b>' + '<br>' + 'No. Killed: <span style="color:maroon">'
-				 + y.invert(d3.mouse(this)[1]) + '</span>')
+				 + Math.round(y.invert(d3.mouse(this)[1])) + '</span>')
 	.style("left", (d3.mouse(this)[0]+200) + "px")
 	.style("top", (d3.mouse(this)[1]+170) + "px")			 
 	
@@ -224,7 +225,7 @@ var mouseMoveOrange = function(d){
         .attr("cy", (d3.mouse(this)[1]+15) + "px")
         
     tooltip.html('<u>' + formatDate(x.invert(d3.mouse(this)[0])) + '</u>' + '<br>' + 'No. Injured: <span style="color:maroon">'
-				 + y2.invert(d3.mouse(this)[1]) + '</span>')
+				 + Math.round(y2.invert(d3.mouse(this)[1])) + '</span>')
 			.style("left", (d3.mouse(this)[0]+260) + "px")
 			.style("top", (d3.mouse(this)[1]+170) + "px")
 }
