--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ var x = d3.scaleTime().domain([d3.min(data, function(d) { return d.date; }),
 							   d3.max(data, function(d) { return d.date; })])
 					  .range([ 0, width ]);
 
-var scaleHeightY = height - (d3.max(data, function(d) { return +d.dead; }) / 
+var scaleHeightY = (d3.max(data, function(d) { return +d.dead; }) / 
 					   d3.max(data, function(d) { return +d.injured; }) * 
 					   height);
 
@@ -260,7 +260,7 @@ svg.append("path")
 	  .attr("stroke-linejoin", "round")
       .attr("d", d3.line()
         .x(function(d) { return x(d.date) })
-        .y(function(d) { return y(d.dead) }))
+        .y(function(d) { return (height - y(d.dead) })))
 	  .on("mouseover", mouseOverBlue)
 	  .on("mousemove", mouseMoveBlue)
 	  .on("mouseleave", mouseLeaveBlue);
