--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ svg.append("path")
 	  .attr("stroke-linejoin", "round")
       .attr("d", d3.line()
         .x(function(d) { return x(d.date) })
-        .y(function(d) { return (height - y.invert(d.dead) )}))
+        .y(function(d) { return y(d.dead) }))
 	  .on("mouseover", mouseOverBlue)
 	  .on("mousemove", mouseMoveBlue)
 	  .on("mouseleave", mouseLeaveBlue);
@@ -269,6 +269,7 @@ svg.append("path")
 	  .datum(data)
       .attr("fill", "none")
 	  .style("stroke-opacity", 0.7)
+	  .style("padding-top", 400px)
       .attr("stroke", "orange")
       .attr("stroke-width", 2)
 	  .attr("stroke-linejoin", "round")
