--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ svg.append("path")
 	  .datum(data)
       .attr("fill", "none")
 	  .style("stroke-opacity", 0.7)
-	  .style("padding-top", 400px)
+	  .style("padding-top", "400px")
       .attr("stroke", "orange")
       .attr("stroke-width", 2)
 	  .attr("stroke-linejoin", "round")
