--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ var x = d3.scaleTime().domain([d3.min(data, function(d) { return d.date; }),
 							   d3.max(data, function(d) { return d.date; })])
 					  .range([ 0, width ]);
 
-var scaleHeightY = (d3.max(data, function(d) { return +d.dead; }) / 
+var scaleHeightY = -1 * ((d3.max(data, function(d) { return +d.dead; }) / 
 					   d3.max(data, function(d) { return +d.injured; }) * 
-					   height);
+					   height) - height);
 
 //This is only for the number of deaths			  
 var y = d3.scaleLinear().domain([0, d3.max(data, function(d) { return +d.dead; })])
@@ -261,7 +261,6 @@ svg.append("path")
       .attr("d", d3.line()
         .x(function(d) { return x(d.date) })
         .y(function(d) { return y(d.dead) }))
-	  .attr("y", height)
 	  .on("mouseover", mouseOverBlue)
 	  .on("mousemove", mouseMoveBlue)
 	  .on("mouseleave", mouseLeaveBlue);
