--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ var x = d3.scaleTime().domain([d3.min(data, function(d) { return d.date; }),
 							   d3.max(data, function(d) { return d.date; })])
 					  .range([ 0, width ]);
 
-var scaleHeightY = -1 * ((d3.max(data, function(d) { return +d.dead; }) / 
+var scaleHeightY = (d3.max(data, function(d) { return +d.dead; }) / 
 					   d3.max(data, function(d) { return +d.injured; }) * 
-					   height) - height);
+					   height);
 
 //This is only for the number of deaths			  
 var y = d3.scaleLinear().domain([0, d3.max(data, function(d) { return +d.dead; })])
@@ -255,12 +255,13 @@ svg.append("path")
 	  .datum(data)
       .attr("fill", "none")
 	  .style("stroke-opacity", 0.7)
+	  .attr("transform","translate("+0+","+400+")")
       .attr("stroke", "steelblue")
       .attr("stroke-width", 2)
 	  .attr("stroke-linejoin", "round")
       .attr("d", d3.line()
         .x(function(d) { return x(d.date) })
-        .y(function(d) { return y2(d.dead) }))
+        .y(function(d) { return y(d.dead) }))
 	  .on("mouseover", mouseOverBlue)
 	  .on("mousemove", mouseMoveBlue)
 	  .on("mouseleave", mouseLeaveBlue);
