--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ var scaleHeightY = (d3.max(data, function(d) { return +d.dead; }) /
 
 //This is only for the number of deaths			  
 var y = d3.scaleLinear().domain([0, d3.max(data, function(d) { return +d.dead; })])
-						 .range([height, 0 ]);
+						 .range([scaleHeightY, 0 ]);
 	  
 //This is only for the number of injured
 var y2 = d3.scaleLinear().domain([0, d3.max(data, function(d) { return +d.injured; })])
@@ -255,7 +255,7 @@ svg.append("path")
 	  .datum(data)
       .attr("fill", "none")
 	  .style("stroke-opacity", 0.7)
-	  .attr("transform","translate("+0+","+400+")")
+	  .attr("transform","translate("+0+","+300+")")
       .attr("stroke", "steelblue")
       .attr("stroke-width", 2)
 	  .attr("stroke-linejoin", "round")
