--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ div.tooltip {
      <p class="txt new">Each year, the United States suffers numerous tragedies in the form of mass shootings. These cruel acts of terror have changed the 
 				   lives of many Americans for the worst. Many lives have been lost. Many have been injured; physically, mentally, and emotionally.</p>
 				   
-	<h4>Mass Shootings Over the Past 4 Years</h4>
+	<h4>Americans Killed and Injured in Mass Shootings Over the Past 4 Years</h4>
 	<!-- SVG GOES HERE -->
 	<div class="canvas">
 		<svg></svg>
